<resources>
    <string name="app_name">MusicSearch</string>

    <string name="error_stub">Error</string>
    <string name="dialog_title_stub">Undefined error</string>
    <string name="label">Album title</string>
    <string name="ok">OK</string>
    <string name="log_in">Log in</string>
    <string name="registration_uppercase">REGISTRATION</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_btn">SIGN UP</string>
    <string name="log_in_btn">LOG IN</string>
    <string name="oops">Oops</string>
    <string name="user_is_not_registrated">User with this login and password is not registered.</string>
    <string name="registration_failed">Registration failed. Please, try again later.</string>

    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="year_of_birth">Birthday</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="name_error">Name can only include Latin characters</string>
    <string name="surname_error">Surname can only include Latin characters</string>
    <string name="year_error">Please, input date in format dd.mm.yyyy, only 18+</string>
    <string name="phone_error">Invalid phone</string>
    <string name="email_error">Invalid email</string>
    <string name="password_error">Password must contain at least 6 characters, a number, lower case letter, upper case letter</string>
    <string name="reg_error_email_exists">Registration failed. User with this email address is already registered.</string>
    <string name="search">Search</string>

    <string name="dialog_tittle_sorry">Sorry</string>
    <string name="no_media_found_error">Couldn\'t find any media</string>
    <string name="dialog_title_device_is_offline">No internet connection</string>
    <string name="dialog_message_device_is_offline">Please, check internet connection.</string>
    <string name="album_image">Album image</string>
    <string name="album">Album</string>
    <string name="artist">Artist</string>
    <string name="genre">Genre</string>
    <string name="country">Country</string>
    <string name="release_date">Date</string>
    <string name="user_not_found">User not found.</string>
    <string name="logout_error">Logout completed unsuccessfully. Please, try again later.</string>
    <string name="tracks">Tracks:\u0020</string>
    <string name="saving">Saving...</string>
    <string name="searching">Searching in database...</string>
    <string name="loging_out">Loging out...</string>

</resources>